[package]
name = "quadtree_impl"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
log = "0.4.13"
pixels = "0.2.0"
rgb = "0.8.25"
winit = "0.24.0"
winit_input_helper = "0.9.0"